<resources>
    <string name="app_name">My Star Wars</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name:</string>
    <string name="gender">Gender:</string>
    <string name="height">Height:</string>
    <string name="image">image</string>
    <string name="cm">cm</string>
    <string name="awesome_characters_from_star_wars">Awesome characters from Star Wars!!</string>
</resources>